--- a/languages.yaml
+++ b/languages.yaml
@@ -174,6 +174,9 @@ en:
             FAVICON:
                 LABEL: favicon
                 HELP: Image used as site's favicon
+            NUM_PER_ROW: 
+                LABEL: Number of clients per row
+                HELP: Number of clients logo you want to show in every row
 pl:
     THEME_X_CORPORATION:
         ADMIN:
